objects/CGC_Milestone_Progress__c.object
<CustomObject>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FINS_Q_Branch_Demo_Reference__c</fullName>
        <description>Field choice selection indicates that the corresponding record is referenced in one or more official Q-Branch demo guides.</description>
        <label>Q-Branch Demo Reference</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FINS_Q_Branch_Demo_Guide</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Milestone__c</fullName>
        <label>Milestone</label>
        <referenceTo>CGC_Milestone__c</referenceTo>
        <relationshipLabel>Milestone Progress</relationshipLabel>
        <relationshipName>Milestone_Progress</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Progress_Value__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Progress Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Milestone Progress</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Milestone__c</columns>
        <columns>Progress_Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MP-{0}</displayFormat>
        <label>Milestone Progress</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Milestone Progress</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>